# featurebyte

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .test_durations  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  Taskfile.lint.yaml  Taskfile.yaml  celerybeatmongo.schedulers.MongoScheduler  cookiecutter-config-file.yml  expected.txt  mkdocs.yaml  mypy.ini  pyproject.toml  pyproject.toml.old  pytest-quick.xml  requirements.txt  result.txt  setup.cfg
.changelog/: CHORE-ruff.yaml  DEV-1271.yaml  DEV-1285.yaml  DEV-1387.yaml  DEV-1408.yaml  DEV-1423.yaml  DEV-1431.yaml  DEV-1439.yaml  DEV-1454.yaml  DEV-1490.yaml  DEV-1517.yaml  DEV-1538.yaml  DEV-1683.yaml  DEV-1692.yaml  DEV-1698.yaml  DEV-1699-1.yaml  DEV-1699.yaml  DEV-1702.yaml  DEV-1703.yaml  DEV-1705.yaml  DEV-1707.yaml  DEV-1710.yaml  DEV-1712.yaml  DEV-1718.yaml  DEV-1721.yaml  DEV-1723.yaml  DEV-1725.yaml  DEV-1726.yaml  DEV-1729.yaml  DEV-1734.yaml  DEV-1736.yaml  DEV-1737.yaml  DEV-1740.yaml  DEV-1744.yaml  DEV-1745.yaml  DEV-1746.yaml  DEV-1749.yaml  DEV-1750.yaml  DEV-1753.yaml  DEV-1758.yaml  (+418 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  slack-template-FAILED.json  slack-template-PR.json  slack-template-PUSH.json  slack_template.json
.github/ISSUE_TEMPLATE/: question.md
.github/mongoreplicaset/: docker-compose.yml  entrypoint.sh  rs-init.sh  startdb.sh
.github/spark/: docker-compose.yml
.github/workflows/: beta-publish.yml  build-artifacts.yml  build.yml  cache-clear.yml  changelog.yaml  changelog.yml  changelog_gen.yaml  daily-cron.yml  daily-cron_gen.yaml  daily-gh-cache.yml  daily-tags.yml  dependencies.yaml  dependencies.yml  dependencies_gen.yaml  docs_pages.yml  documentation.yaml  documentation.yml  documentation_gen.yaml  expire-tags.yaml  lint.yaml  lint.yml  lint_gen.yaml  notify.yaml  notify.yml  notify_gen.yaml  publish-beta.yml  publish-dev.yaml  publish-dev.yml  publish-dev_gen.yaml  publish-public.yaml  publish-public.yml  publish-public_gen.yaml  publish.yml  release-drafter.yml  release.yml  run.sh  test-and-build.yml  test-notebooks.yaml  test-notebooks_gen.yaml  test.yaml  (+2 more)
docker/: Dockerfile  README.md  docker-compose-beta.yml  docker-compose-local.yml  docker-compose.yml  docs.Dockerfile  docs.py  entrypoint-featurebyte.sh  entrypoint-jupyter.sh  entrypoint-mongo.sh  entrypoint.sh  jupyter.Dockerfile  local-docker-compose.yml  migration.py  mongo.Dockerfile  start.ps1  start.py  start.sh  stop.py
docker/dev/: docker-compose.yml  entrypoint.sh
docker/samples/: French_grocery_observation_set.csv  beta-testing-datasets.ipynb  beta-testing-instructions.ipynb  beta-testing-tutorials.ipynb  credit_card_observation_set.csv  datasets-overview.ipynb  instructions.ipynb  solutions-beta-testing-tutorials.ipynb
docker/test/: docker-compose.yml  entrypoint-mongo.sh
docs/: gen_ref_pages.py  index.md
docs/about/: architecture.md  overview.md
docs/css/: code_select.css  extra.css
docs/get_started/: installation.md  quickstart.md
docs/misc/torchserve/: Dockerfile  README.md  Taskfile.yaml  config.properties  dockerd-entrypoint.sh  log4j2.xml  pyproject.toml
docs/misc/torchserve/serving/: handler.py
docs/notebooks/: deep dive data modeling - final.ipynb  deep dive feature engineering - final.ipynb  deep dive materializing features - final.ipynb  playground credit cards.ipynb  playground healthcare.ipynb  prebuilt_catalogs.py  quick start end-to-end workflow - final.ipynb  quick start feature engineering - final.ipynb  quick start feature management - final.ipynb  quick start model training - final.ipynb  quick start reusing features - final.ipynb
docs/source/: api.rst  conf.py  index.rst
docs/user/: about.md  installation.md  quickstart.md
docs/user_guide/: temp.md
featurebyte/: __init__.py  __main__.py  app.py  config.py  conftest.py  enum.py  errors.py  example.py  exception.py  feature_utility.py  list_utility.py  logger.py  logging.py  middleware.py  typing.py  unified_api_settings.py  util.py  warning.py
featurebyte/_overrides/: typechecked_override.py
featurebyte/access/: __init__.py  database.py
featurebyte/api/: agg_func.py  api_object.py  api_object_util.py  as_at_aggregator.py  asat_aggregator.py  base_aggregator.py  base_data.py  base_feature_target_namespace.py  base_table.py  batch_feature_table.py  batch_request_table.py  catalog.py  catalog_decorator.py  catalog_get_by_id_mixin.py  change_view.py  context.py  credential.py  data.py  data_source.py  database_source.py  database_table.py  deployment.py  derived_aggregation.py  dimension_data.py  dimension_table.py  dimension_view.py  entity.py  event_data.py  event_table.py  event_view.py  feature.py  feature_group.py  feature_job.py  feature_list.py  (+58 more)
hive-udf/: settings.gradle
notebook/: tile-inconsistency-100.ipynb  tile-inconsistency-160.ipynb  tile-inconsistency-25.ipynb  tile-inconsistency-40.ipynb  tile-inconsistency.ipynb  tile.ipynb
notebooks/: deep dive data modeling - final.ipynb  deep dive materializing features - final.ipynb  model.pkl  playground credit cards.ipynb  playground healthcare.ipynb  prebuilt_catalogs.py  quick start end-to-end workflow - final.ipynb  quick start feature management - final.ipynb  quick start model training - final.ipynb  quick start reusing features - final.ipynb  training_data.csv  training_data.parquet
plans/: user_provided_features.md
scripts/: dump_staging_app.sh  enforce_import_rules.py  migration_test.py  mkdocs.sh  populate_dataset.py  populate_datasets.py  test-docs-setup.py  test-setup.sh
sql/: F_INDEX_TO_TIMESTAMP.sql  F_TIMESTAMP_TO_INDEX.sql  SP_TILE_GENERATE.sql  SP_TILE_GENERATE_SCHEDULE.sql  SP_TILE_MONITOR.sql  SP_TILE_ONLINE_LOOKBACK_PERIOD.sql  SP_TILE_REMOVE_ONLINE_TILE.sql  SP_TILE_REPLACE_ONLINE_TILE.sql  SP_TILE_TRIGGER_GENERATE_SCHEDULE.sql
test_databricks/: connect.py  job_api.py  notebook_tile_generate_entity_tracking.py  noteook_tile_generate.py
tests/: conftest.py  mongo-compose.yaml  source_types.py  test_tiling.py
(+2506 files in other folders)
