[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "featurebyte"
authors = [{name="FeatureByte", email="it-admin@featurebyte.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
version = "3.1.2"
description = "..."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<4"
license = "LicenseRef-Elastic-License-2.0"
license-files = ["LICENSE"]
dependencies = [
  "aiofiles",
  "pyyaml",
  "alive-progress",
  "black",
  "humanize",
  "importlib-metadata",
  "numpy",
  "orjson",
  "pandas",
  "pillow",
  "pyarrow",
  "pydantic",
  "pydantic-settings",
  "pymongo",
  "pyopenssl",
  "python-on-whales",
  "python-multipart",
  "requests",
  "rich",
  "sqlglot",
  "websocket-client",
  "pydantic-extra-types",
  "croniter",
]

[tool.uv]
# Use this for overriding vulnerable dependencies
override-dependencies = []


[project.optional-dependencies]
server = [
  "databricks-sdk",
  "fastapi",
  "motor",
  "snowflake-connector-python",
  "pdfkit",
  "pyhive [hive_pure_sasl]",
  "thrift-sasl",
  "smart-open [azure, gcs]",
  "celery [redis]",
  "redis",
  "celerybeat-mongo",
  "databricks-sql-connector",
  "featurebyte-freeware",
  "gevent",
  "requests-kerberos",
  "feast [snowflake, redis, mysql, gcp]",
  "asyncache",
  "google-cloud-bigquery",
  "google-cloud-bigquery-storage",
  "aioboto3"
]

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "docs" },
  { include-group = "build" },
]
test = [
  "jupyterlab",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-order",
  "pytest-rerunfailures",
  "pytest-split",
  "pytest-timeout",
  "pytest-xdist",
  "freezegun",
  "junitparser",
  "mongomock",
  "mongomock-motor",
]
lint = [
  { include-group = "lint-types" },
  { include-group = "lint-safety" },
  { include-group = "lint-style" },
]
lint-types = [
  "mypy",
  "mypy-extensions",
  "types-Markdown",
  "types-PyYAML",
  "types-aiofiles",
  "types-backports",
  "types-cachetools",
  "types-chardet",
  "types-cryptography",
  "types-decorator",
  "types-paramiko",
  "types-protobuf",
  "types-pyOpenSSL",
  "types-pycurl",
  "types-python-dateutil",
  "types-pytz",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-simplejson",
  "types-six",
  "types-toml",
  "types-typed-ast",
  "types-tzlocal",
  "types-ujson",
  "types-urllib3",
  "types-croniter",
]
lint-safety = [
  "pip-licenses",
  "pip-audit",
  "bandit"
]
lint-style = [
  "ruff",
  "darglint"
]
docs = [
  "docstring-parser",
  "humanize",
  "mkautodoc",
  "mkdocs",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-enumerate-headings-plugin",
  "mkdocs-gen-files",
  "mkdocs-git-authors-plugin",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-jupyter",
  "mkdocs-literate-nav",
  "mkdocs-minify-plugin",
  "mkdocs-print-site-plugin",
  "mkdocs-section-index",
  "mkdocs-table-reader-plugin",
]
build = [
  "setuptools",
  "setuptools-scm",
]


[tool.setuptools.packages.find]
namespaces = true
