[tool.poetry]
name = "serving"
version = "0.1.0"
description = ""
authors = ["Viktor Kovryzhkin <vik.kovrizhkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
sentence-transformers = "^2.2.2"
transformers = "^4.33.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
torchserve = "^0.8.2"
torch-model-archiver = "^0.8.2"
torch-workflow-archiver = "^0.2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
